[package]
name = "handwritten-json"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Convert a non-standard JSON string into a normalized JSON string."
homepage = "https://github.com/yangby-cryptape/rust-handwritten-json"
repository = "https://github.com/yangby-cryptape/rust-handwritten-json"
keywords = ["json"]
categories = ["encoding"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-*"]
